# kerestey.net

./: .build.yml  .gitignore  LICENSE  cabal.project.freeze  config.toml  engine.cabal  makefile  readme.md  stack.yaml
_engine/: main.hs
_site/: _redirects  atom.xml  index.html  sitemap.xml  writing.html
_site/css/: style.css  writing.css
_site/writing/: 2019-10-10-serialising-kotlin-sealed-classes-to-json.html  2019-10-26-post-multipart-form-data-using-khttp.html  2020-04-05-announcing-unverified-dot-email.html  2020-07-04-listening-to.html  2020-07-07-first-impressions-single-spa.html  2020-11-22-on-types-in-evolving-microfrontend-communication.html
_site/writing/drafts/: 1970-01-01-announcing-unverified-dot-email.html  2000-01-01-first-impressions-single-spa.html  3000-01-01-on-types-in-evolving-cross-micro-frontends-communication.html  (+1 more)
content/: _index.md  index.html
content/css/: style.css  writing.css
content/static/: robots.txt
content/templates/: default.html  index.html  page.html  sitemap.xml  writing-list-item.html  writing-list.html  writing.html
content/texts/: acknowledgements.md  home.md
content/writing/: 2019-10-10-serialising-kotlin-sealed-classes-to-json.md  2019-10-26-post-multipart-form-data-using-khttp.md  2020-04-05-announcing-unverified-dot-email.md  2020-07-04-listening-to.md  2020-07-07-first-impressions-single-spa.md  2020-11-22-on-types-in-evolving-microfrontend-communication.md  _index.md
static/: keybase.txt  robots.txt
static/css/: style.css
templates/: base-writing.html  base.html  index.html  page.html  section.html
(+4 files in other folders)
