name:           engine
version:        0.1.0.0
author:         Pavlo Kerestey
maintainer:     pavlo@kerestey.net
copyright:      Pavlo Kerestey (C) 2017
build-type:     Simple
cabal-version:  >= 1.10

executable engine
  main-is: main.hs
  hs-source-dirs: _engine
  default-language: Haskell2010
  ghc-options: -Wall -Werror -threaded
  build-depends:
                base >= 4.7 && < 5
              , filepath >= 1.4 && < 1.5
              , hakyll >= 4.13 && < 4.14
